' Generated by UML Generator
' Encoded: pLLDQnin4BtxL-YugMEJKmzBQn9meOOw3JYqXL2Ah9quGtQbHTAQqZJvxHtjhgJzIjD23xqO-StCc_T67tjkBDUsAlAPkKTPSiqB9d9kp8Mr6lULXOrGSeS_W9tDxZ039b2B76QpEejzvcWrqE9XnjYYv5BmUtYlAWDRa5NAhWQ8oyfGWcx2Qxzq-89-vfumUPdhb4qndJYMKgEqxbzoahAZmgnM5q2qeBbLEcMRTkNJ7hsnmDSuUw0vMHIFR7lnvTlc-jrsbp9YOs_PQnUMLR47_V6Mw0hZ8sSkKX15YsxRPV0QUYIrQ9vbBfn8Na3ATZH_UI2FO8J6qgAI4Jp20MZZa1EsLoe7BayP-HDKcAbgdqFqFHSQEErZwzHDnA-ZNQ-jSTjLKE_OM8E39rIqSuuwWbdVuH_PSvIKT4bapb4GvS1rvEp7q7mAp2uIHRkoAzV0mQtoC9pXmMk6XCskVa1ZttXpgs1tMFD_RF4r6BlMU8JQmZoSweAZJBW-6D__vkleHWmT-GulJADK1XjddLinEQ8WVvAhdjyTDvVmtGxsJhPGk62acPg1lkK2M4_dqoJ3qnJ3u1sOjDkzqiyR7N4aWtAQzj-v2y_kgyLY_CRsel693V1okOhd8pvqBZiqYN0lUtGLLBTe5FrjRPZeSldpJz9whJh5gmdLpt2FuptJvo0p-XR-0W
' URL: http://www.plantuml.com/plantuml/uml/pLLDQnin4BtxL-YugMEJKmzBQn9meOOw3JYqXL2Ah9quGtQbHTAQqZJvxHtjhgJzIjD23xqO-StCc_T67tjkBDUsAlAPkKTPSiqB9d9kp8Mr6lULXOrGSeS_W9tDxZ039b2B76QpEejzvcWrqE9XnjYYv5BmUtYlAWDRa5NAhWQ8oyfGWcx2Qxzq-89-vfumUPdhb4qndJYMKgEqxbzoahAZmgnM5q2qeBbLEcMRTkNJ7hsnmDSuUw0vMHIFR7lnvTlc-jrsbp9YOs_PQnUMLR47_V6Mw0hZ8sSkKX15YsxRPV0QUYIrQ9vbBfn8Na3ATZH_UI2FO8J6qgAI4Jp20MZZa1EsLoe7BayP-HDKcAbgdqFqFHSQEErZwzHDnA-ZNQ-jSTjLKE_OM8E39rIqSuuwWbdVuH_PSvIKT4bapb4GvS1rvEp7q7mAp2uIHRkoAzV0mQtoC9pXmMk6XCskVa1ZttXpgs1tMFD_RF4r6BlMU8JQmZoSweAZJBW-6D__vkleHWmT-GulJADK1XjddLinEQ8WVvAhdjyTDvVmtGxsJhPGk62acPg1lkK2M4_dqoJ3qnJ3u1sOjDkzqiyR7N4aWtAQzj-v2y_kgyLY_CRsel693V1okOhd8pvqBZiqYN0lUtGLLBTe5FrjRPZeSldpJz9whJh5gmdLpt2FuptJvo0p-XR-0W
' Generated on: 2025-12-17T00:08:07.179210

@startuml
skinparam classAttributeIconSize 0
hide circle

class Waitress {
  -pancakeHouseMenu: PancakeHouseMenu
  -dinerMenu: DinerMenu
  --
  +Waitress(pancakeHouseMenu: PancakeHouseMenu, dinerMenu: DinerMenu)
  +printMenu(): void
  -printMenu(iterator: Iterator): void
}

class DinerMenu {
  -{static} MAX_ITEMS: int = 6
  -numberOfItems: int = 0
  -menuItems: MenuItem
  --
  +DinerMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +createIterator(): Iterator
}

class MenuItem {
  -name: String
  -description: String
  -vegetarian: boolean
  -price: double
  --
  +MenuItem(name: String, description: String, vegetarian: boolean, price: double)
  +getName(): String
  +getDescription(): String
  +isVegetarian(): boolean
  +getPrice(): double
}

class PancakeHouseMenu {
  -items: List<MenuItem>
  --
  +PancakeHouseMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +createIterator(): Iterator
}

class MenuTestDrive {
  +{static} main(args: String[]): void
}

class PancakeHouseMenuIterator {
  -items: List<MenuItem>
  -position: int = 0
  --
  +PancakeHouseMenuIterator(items: List<MenuItem>)
  +hasNext(): boolean
  +next(): MenuItem
}

interface Iterator {
  ~hasNext(): boolean
  ~next(): MenuItem
}

class DinerMenuIterator {
  -items: MenuItem
  -position: int = 0
  --
  +DinerMenuIterator(items: MenuItem[])
  +hasNext(): boolean
  +next(): MenuItem
}

Waitress *-- PancakeHouseMenu
Waitress *-- DinerMenu
Waitress ..> Iterator
DinerMenu *-- MenuItem
DinerMenu ..> Iterator
PancakeHouseMenu o-- MenuItem
PancakeHouseMenu ..> Iterator
PancakeHouseMenuIterator ..|> Iterator
PancakeHouseMenuIterator o-- MenuItem
Iterator ..> MenuItem
DinerMenuIterator ..|> Iterator
DinerMenuIterator *-- MenuItem
@enduml